--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-test
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta http-equiv="refresh" content="0; url='./book/index.html'" />
+  </head>
+  <body>
+    <p>Redirecting to the book…</p>
+  </body>
+</html>
